# dolphin

./: CMakeLists.txt
Data/Sys/GameSettings/: GHAE08.ini  GHAJ08.ini  GLEE08.ini  GLEJ08.ini  GLEP08.ini  GRS.ini
Source/: CMakeLists.txt  dolphin-emu.sln
Source/Core/: CMakeLists.txt
Source/Core/AudioCommon/: AudioCommon.cpp  AudioCommon.h  AudioCommon.vcxproj  AudioCommon.vcxproj.filters  CMakeLists.txt  Mixer.cpp  Mixer.h
Source/Core/Common/: CMakeLists.txt  Common.vcxproj  Common.vcxproj.filters  FileUtil.cpp  FileUtil.h
Source/Core/Common/GL/: GLContext.cpp  GLContext.h
Source/Core/Common/GL/GLExtensions/: GLExtensions.cpp
Source/Core/Common/Logging/: ConsoleListener.h  ConsoleListenerNix.cpp
Source/Core/Core/: BootManager.cpp  CMakeLists.txt  ConfigManager.cpp  ConfigManager.h  Core.cpp  Core.h  Core.vcxproj  Core.vcxproj.filters  CoreTiming.cpp  CoreTiming.h  NetPlayClient.cpp  State.cpp
Source/Core/Core/Boot/: Boot.cpp
Source/Core/Core/Config/: MainSettings.cpp  UISettings.cpp  UISettings.h
Source/Core/Core/ConfigLoaders/: IsSettingSaveable.cpp
Source/Core/Core/HW/: AudioInterface.cpp  DSP.cpp  DSP.h  HW.cpp  SystemTimers.cpp  VideoInterface.cpp
Source/Core/Core/HW/DSPLLE/: DSPHost.cpp
Source/Core/Core/HW/EXI/: EXI_DeviceMic.cpp  EXI_DeviceMic.h
Source/Core/Core/HW/SI/: SI_DeviceGCController.cpp  SI_DeviceGCController.h
Source/Core/Core/IOS/USB/Bluetooth/: BTReal.cpp
Source/Core/Core/PowerPC/: PPCCache.cpp
Source/Core/Core/PowerPC/Jit64Common/: EmuCodeBlock.cpp
Source/Core/DolphinLibretro/: Boot.cpp  DolphinLibretro.vcxproj  Input.cpp  Main.cpp  Options.cpp  RetroGLContext.cpp  RetroGLContext.h  Video.cpp  Video.h  VideoVulkan.h  Vulkan.cpp
Source/Core/InputCommon/: CMakeLists.txt  InputCommon.vcxproj
Source/Core/InputCommon/ControllerEmu/ControlGroup/: ModifySettingsButton.cpp
Source/Core/InputCommon/ControllerInterface/: ControllerInterface.cpp  ControllerInterface.h
Source/Core/UICommon/: CMakeLists.txt  UICommon.cpp  UICommon.h  UICommon.vcxproj
Source/Core/VideoBackends/D3D/: CMakeLists.txt  D3D.vcxproj  D3DBase.cpp  D3DBase.h  D3DUtil.cpp  Render.cpp  Render.h  main.cpp
Source/Core/VideoBackends/Null/: CMakeLists.txt  Null.vcxproj  NullBackend.cpp  Render.cpp
Source/Core/VideoBackends/OGL/: CMakeLists.txt  FramebufferManager.cpp  OGL.vcxproj  OGL.vcxproj.filters  Render.cpp  Render.h  StreamBuffer.cpp  main.cpp
Source/Core/VideoBackends/Software/: CMakeLists.txt  SWOGLWindow.cpp  SWOGLWindow.h  SWRenderer.cpp  SWRenderer.h  SWmain.cpp  Software.vcxproj
Source/Core/VideoBackends/Vulkan/: Renderer.cpp  Renderer.h  Vulkan.vcxproj  VulkanContext.cpp  VulkanLoader.cpp  main.cpp
Source/Core/VideoCommon/: AsyncRequests.cpp  AsyncRequests.h  BPStructs.cpp  CMakeLists.txt  Fifo.cpp  HiresTextures.cpp  OnScreenDisplay.cpp  OpcodeDecoding.cpp  PixelShaderManager.cpp  RenderBase.cpp  RenderBase.h  TextureCacheBase.cpp  VertexLoader.cpp  VertexLoader_Normal.cpp  VertexManagerBase.cpp  VertexShaderManager.cpp  VideoBackendBase.cpp  VideoCommon.h  VideoCommon.vcxproj  VideoCommon.vcxproj.filters  VideoConfig.cpp  VideoConfig.h
Source/VSProps/: Base.props
